--- a/test.html
+++ b/test.html
@@ -4,16 +4,19 @@
         <meta charset="utf-8">
         <title>Getting Started</title>
         <script src="https://unpkg.com/vue"></script>
+        
     </head>
 <body>
     <div id="app">
-        <h1>{{ name }}</h1></div>
+        <h1>{{ name }}</h1>
+    <p>{{ description }}</p></div>
 
     <script>
         var app = new Vue({
             el: '#app',
             data: {
-                name: 'Vue Hero'
+                name: "Vue Hero",
+                description: "desc",
             }
         })
     </script>
