--- a/attribute binding.html
+++ b/attribute binding.html
@@ -16,7 +16,7 @@
         var app=new Vue({
             el:"#app",
             data:{
-                link: "https://pokemonshowdown.com", //anytime 'link' will be used, it will use this value
+                link: "https://pokemonshowdown.com", //anytime 'link' will be used, it will use this assigned variable value
                 image: "/home/rotenkiwi/Downloads/Lone Samurai.jLopeg" //anytime 'image' is used, it will use this value
             }
         })
