--- a/attribute binding.html
+++ b/attribute binding.html
@@ -17,7 +17,7 @@
             el:"#app",
             data:{
                 link: "https://pokemonshowdown.com", //anytime 'link' will be used, it will use this assigned variable value
-                image: "/home/rotenkiwi/Downloads/Lone Samurai.jLopeg" //anytime 'image' is used, it will use this value
+                image: "/home/rotenkiwi/Downloads/Lone Samurai.jLopeg" //anytime 'image' is used, it will use this assigned variable value
             }
         })
     </script>
