--- a/attribute binding.html
+++ b/attribute binding.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Getting Started</title>
+        <title>Getting Started with Vue</title>
         <script src="https://unpkg.com/vue"></script>
         
     </head>
